--- a/db/build.xml
+++ b/db/build.xml
@@ -16,19 +16,11 @@ Microsystems, Inc. All Rights Reserved.
 <project name="db" default="netbeans" basedir=".">
 
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
-  <property name="build" location="../nbbuild/netbeans"/>
 
   <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="tojar" classname="org.netbeans.nbbuild.ToJar" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="../nbbuild/nbantext.jar"/>
-  <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
-
-  <patternset id="db.files">
-    <include name="modules/db.jar"/>
-    <include name="modules/docs/db.jar"/>
-    <include name="modules/ext/ddl.jar"/>
-  </patternset>
 
   <target name="init">
     <tstamp/>
@@ -40,9 +32,9 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="libsrc" destdir="libsrc" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
         <pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/autoload/openide-io.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
       </classpath>
     </javac>
   </target>
@@ -52,10 +44,10 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
         <pathelement path="libsrc"/>
         <pathelement location="../openide/openide-13javac-workaround.jar"/>
-        <pathelement location="${build}/lib/openide.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
-        <pathelement location="${build}/modules/openidex.jar"/>
-        <pathelement location="${build}/modules/autoload/openide-io.jar"/>
+        <pathelement location="../openide/netbeans/lib/openide.jar"/>
+        <pathelement location="../openide/deprecated/netbeans/modules/autoload/openide-deprecated.jar"/> <!-- XXX -->
+        <pathelement location="../openide/io/netbeans/modules/autoload/openide-io.jar"/>
+        <pathelement location="../openidex/netbeans/modules/openidex.jar"/>
       </classpath>
     </javac>
   </target>
@@ -65,18 +57,18 @@ Microsystems, Inc. All Rights Reserved.
   </target>
 
   <target name="jars" depends="init,tojar,compile">
-    <mkdir dir="${build}/modules"/>
+    <mkdir dir="netbeans/modules"/>
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-    <locjar jarfile="${build}/modules/db.jar"
+    <locjar jarfile="netbeans/modules/db.jar"
          manifest="manifest-subst.mf"
          basedir="src"
          excludesfile="../nbbuild/standard-jar-excludes.txt"
          compress="false">
       <locale name="ja"/>
     </locjar>
-    <mkdir dir="${build}/modules/ext"/>
-    <locjar jarfile="${build}/modules/ext/ddl.jar"
+    <mkdir dir="netbeans/modules/ext"/>
+    <locjar jarfile="netbeans/modules/ext/ddl.jar"
          basedir="libsrc"
          excludesfile="../nbbuild/standard-jar-excludes.txt"
          compress="false">
@@ -105,26 +97,20 @@ Microsystems, Inc. All Rights Reserved.
     </jhindexer>
     <mkdir dir="javahelp/org/netbeans/modules/usersguide"/>
     <copy file="../usersguide/javahelp/org/netbeans/modules/usersguide/ide.css" tofile="javahelp/org/netbeans/modules/usersguide/ide.css"/>
-    <mkdir dir="${build}/modules/docs"/>
-    <locjar jarfile="${build}/modules/docs/db.jar"
+    <mkdir dir="netbeans/modules/docs"/>
+    <locjar jarfile="netbeans/modules/docs/db.jar"
             compress="true">
       <fileset dir="javahelp" excludesfile="../nbbuild/standard-jar-excludes.txt" excludes="org/netbeans/modules/usersguide/"/>
       <locale name="ja"/>
     </locjar>
   </target>
 
-  <target name="netbeans" depends="jars,javahelp">
-      <genlist outputfiledir="${build}" module="modules/db.jar">
-          <fileset dir="${build}">
-	      <patternset refID="db.files"/>
-          </fileset>
-      </genlist>
-  </target>
+  <target name="netbeans" depends="jars,javahelp"/>
 
   <target name="nbm" depends="netbeans">
     <makenbm file="db.nbm"
-             productDir="${build}"
-             module="modules/db.jar"
+             topdir="."
+             module="netbeans/modules/db.jar"
              homepage="http://${homepage.base}/db.html"
              distribution="${dist.base}/db.nbm">
       <license file="${license.file}"/>
@@ -138,17 +124,18 @@ Microsystems, Inc. All Rights Reserved.
         <include name="**/*.class"/>
         <include name="**/*.jar"/>
       </fileset>
-      <fileset dir="${build}">
-        <patternset refID="db.files"/>
-      </fileset>
+    </delete>
+    <delete>
       <fileset dir="libsrc">
         <include name="**/*.class"/>
       </fileset>
     </delete>
     <delete file="manifest-subst.mf"/>
     <delete file="db.nbm"/>
-    <delete dir="javahelp/org/netbeans/modules/db/docs/JavaHelpSearch2"/>
-    <delete dir="javahelp/org/netbeans/modules/db/docs/ja/JavaHelpSearch2"/>
+    <delete dir="netbeans"/>
+    <delete dir="Info"/>
+    <delete dir="javahelp/org/netbeans/modules/db/docs/JavaHelpSearch"/>
+    <delete dir="javahelp/org/netbeans/modules/db/docs/ja/JavaHelpSearch"/>
     <delete dir="javahelp/org/netbeans/modules/usersguide"/>
   </target>
 
